[package]
name = "cargo-nds"
version = "0.1.2"
authors = ["Rustnds Org", "Andrea Ciliberti <meziu210@icloud.com>"]
description = "Cargo wrapper for developing Nintendo nds homebrew apps"
repository = "https://github.com/rustnds/cargo-nds"
keywords = ["nds", "homebrew"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
exclude = [".github"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
cargo_metadata = "0.18.1"
rustc_version = "0.4.0"
semver = "1.0.10"
serde = { version = "1.0.139", features = ["derive"] }
tee = "0.1.0"
toml = "0.8.12"
clap = { version = "4.0.15", features = ["derive", "wrap_help"] }
shlex = "1.1.0"
serde_json = "1.0.108"
